<resources>
    <string name="app_name">e-karyawan</string>
    <string name="menu_1">Data Karyawan</string>
    <string name="menu_2">Tambah Karyawan</string>
    <string name="menu_3">Hitung Gaji Karyawan</string>
    <string name="text_view">Text</string>
    <string name="greeting">Hai %s, \nSelamat Datang</string>

    <string name="title_pdf">Laporan Gaji Karyawan: </string>
    <string name="name_title">Nama: </string>
    <string name="address_title">Alamat: </string>
    <string name="gender_title">Jenis Kelamin: </string>
    <string name="position_title">Jabatan: </string>
    <string name="length_of_work_title">Lama Bekerja: </string>
    <string name="salary_title">Gaji Pokok: </string>
    <string name="month_title">Gaji Bulan: </string>
    <string name="bonus_title">Bonus: </string>
    <string name="pph_title">PPH 5%: </string>
    <string name="sum_salary_title">Total Gaji: </string>

    <string name="name">Nama Karyawan</string>
    <string name="address">Alamat</string>
    <string name="gender">Jenis Kelamin</string>
    <string name="position">Jabatan</string>
    <string name="length_of_work">Lama Bekerja</string>
    <string name="salary">Gaji Pokok</string>
    <string name="month">Bulan</string>
    <string name="bonus">Bonus</string>
    <string name="pph">PPH 5%</string>
    <string name="sum_salary">Total Gaji</string>

    <string name="photo">gambar</string>
    <string name="title_employee">Daftar Karyawan</string>
    <string name="title_detail">Detail Karyawan</string>
    <string name="title_add">Tambah Karyawan</string>
    <string name="title_salary">Hitung Gaji Karyawan</string>
    <string name="id">Id Karyawan</string>

    <string name="btn_delete">Hapus data Karyawan</string>
    <string name="btn_insert">Tambah data Karyawan</string>
    <string name="btn_edit">Ubah data Karyawan</string>
    <string name="btn_sum">Simpan dan Cetak Gaji Karyawan</string>
    <string name="btn_login">Masuk</string>
    <string name="btn_logout">Keluar</string>

    <string name="cant_empty">Kolom ini tidak boleh kosong</string>
    <string name="succes">Data Karyawan Berhasil ditambahkan!</string>
    <string name="deleted">Data Karyawan Berhasil dihapus!</string>
    <string name="edited">Data Karyawan berhasil diperbarui!</string>
    <string name="permission_ok">Permission Granted..</string>
    <string name="permission_cancel">Permission Denied..</string>
    <string name="notif_id">pdf_channel</string>
    <string name="ch_name">pdf</string>
    <string name="desc_ch">ekaryawan pdf download</string>
    <string name="notification_title">E-karyawan</string>
    <string name="notification_msg">Gaji Karyawan berhasil diunduh.</string>
    <string name="pdf_geenerated">File PDF berhasil diunduh..</string>
    <string name="pdf_geenerated_fail">File PDF gagal diunduh..</string>
    <string name="saved">Data gaji karyawan berhasil disimpan ke database.</string>
    <string name="confirm">Konfirmasi</string>
    <string name="logout_msg">Apakah anda yakin ingin keluar dari aplikasi?</string>
    <string name="delete_msg">Apakah anda yakin ingin menghapus data karyawan tersebut?</string>
    <string name="edit_msg">Apakah anda yakin ingin mengubah data karyawan tersebut?</string>
    <string name="uname_check_msg">Maaf hanya admin yang bisa melihat detail karyawan.</string>
    <string name="yes">Iya</string>
    <string name="no">Tidak</string>
    <string name="ok">OK</string>

    <string name="pt_name">PT. Baroqah tbk.</string>
    <string name="username_invalid">Username tidak sesuai</string>
    <string name="pass_invalid">Password tidak sesuai</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login_success">Berhasil masuk</string>
    <string name="admin">admin</string>
    <string name="hrd">hrd</string>
    <string name="admin_pass">admin123</string>
    <string name="hrd_pass">hrd123</string>
    <string name="manager">Manager</string>
    <string name="spv">Supervisor</string>
    <string name="staff">Staff</string>

    <string-array name="jenis_kelamin">
        <item>Laki-laki</item>
        <item>Perempuan</item>
    </string-array>

    <string-array name="jabatan">
        <item>Manager</item>
        <item>Supervisor</item>
        <item>Staff</item>
    </string-array>

    <string-array name="lama_jabatan">
        <item>1 Tahun</item>
        <item>2 Tahun</item>
        <item>3 Tahun</item>
        <item>4 Tahun</item>
        <item>5 Tahun</item>
        <item>6 Tahun</item>
        <item>7 Tahun</item>
        <item>8 Tahun</item>
        <item>9 Tahun</item>
        <item>10 Tahun</item>
    </string-array>

    <string-array name="month">
        <item>Januari</item>
        <item>Februari</item>
        <item>Maret</item>
        <item>April</item>
        <item>Mei</item>
        <item>Juni</item>
        <item>Juli</item>
        <item>Agustus</item>
        <item>September</item>
        <item>Oktober</item>
        <item>November</item>
        <item>Desember</item>
    </string-array>
</resources>